Minor alignment fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -136,7 +136,7 @@ a.more {
   border-radius: 5px;
   background: #68a3cc;
   color: #fff;
-  margin: 20px 0; }
+  margin: 35px 0 10px; }
   a.more:hover {
     background: #7EB6DD; }
 
